--- a/src/main/resources/templates/newsletterDetails.html
+++ b/src/main/resources/templates/newsletterDetails.html
@@ -15,7 +15,7 @@
 </head>
 <body>
    <!-- central navigation -->
-   <nav id="top-nav" class="navbar navbar-default">
+   <nav id="top-nav" class="navbar navbar-static-top navbar-inverse">
       <div class="container-fluid">
          <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-nav" aria-expanded="false">
@@ -30,13 +30,13 @@
          <div id="main-nav" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                <li role="presentation">
-                  <a href="index.html"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Übersicht</a>
+                  <a href="overview.html" th:href="@{/overview}"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Übersicht</a>
                </li>
                <li role="presentation">
                   <a href="persons.html" th:href="@{/persons}"><span class="glyphicon glyphicon-user nav-icon" aria-hidden="true"></span> Personen</a>
                </li>
-               <li class="disabled" role="presentation">
-                  <a href="#"><span class="glyphicon glyphicon-tent nav-icon" aria-hidden="true"></span> Veranstaltungen</a>
+               <li role="presentation">
+                  <a href="events.html"><span class="glyphicon glyphicon-tent nav-icon" aria-hidden="true"></span> Veranstaltungen</a>
                </li>
                <li class="disabled" role="presentation">
                   <a href="#"><span class="glyphicon glyphicon-map-marker nav-icon" aria-hidden="true"></span> Ortsgruppen</a>
