--- a/src/main/resources/templates/persons.html
+++ b/src/main/resources/templates/persons.html
@@ -26,7 +26,7 @@
 </head>
 <body>
 <!-- central navigation -->
-<nav id="top-nav" class="navbar navbar-default navbar-static-top">
+<nav id="top-nav" class="navbar navbar-static-top navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-nav"
@@ -48,8 +48,8 @@
                     <a href="#" th:href="@{/persons}"><span class="glyphicon glyphicon-user nav-icon"
                                                             aria-hidden="true"></span> Personen <span class="sr-only">(akutell)</span></a>
                 </li>
-                <li class="disabled" role="presentation">
-                    <a href="#" th:href="@{/events}"><span class="glyphicon glyphicon-tent nav-icon" aria-hidden="true"></span> Veranstaltungen</a>
+                <li role="presentation">
+                    <a href="events.html" th:href="@{/events}"><span class="glyphicon glyphicon-tent nav-icon" aria-hidden="true"></span> Veranstaltungen</a>
                 </li>
                 <li class="disabled" role="presentation">
                     <a href="#" th:href="@{/localGroups}"><span class="glyphicon glyphicon-map-marker nav-icon" aria-hidden="true"></span> Ortsgruppen</a>
