--- a/src/main/resources/templates/persons.html
+++ b/src/main/resources/templates/persons.html
@@ -29,8 +29,7 @@
 <nav id="top-nav" class="navbar navbar-static-top navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-nav"
-                    aria-expanded="false">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-nav" aria-expanded="false">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -45,8 +44,7 @@
                     <a href="overview.html" th:href="@{/overview}"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Übersicht</a>
                 </li>
                 <li role="presentation" class="active">
-                    <a href="#" th:href="@{/persons}"><span class="glyphicon glyphicon-user nav-icon"
-                                                            aria-hidden="true"></span> Personen <span class="sr-only">(akutell)</span></a>
+                    <a href="#" th:href="@{/persons}"><span class="glyphicon glyphicon-user nav-icon" aria-hidden="true"></span> Personen <span class="sr-only">(akutell)</span></a>
                 </li>
                 <li role="presentation">
                     <a href="events.html" th:href="@{/events}"><span class="glyphicon glyphicon-tent nav-icon" aria-hidden="true"></span> Veranstaltungen</a>
@@ -100,6 +98,8 @@
                 <button type="button" id="filter-button" class="btn btn-default" data-toggle="modal" data-target="#filter-persons-form">
                         <span class="glyphicon glyphicon-filter"></span> Filtern
                 </button>
+
+                <a href="mailto:" class="btn btn-default" th:if="${filtered}" th:href="'mailto:recipients@naju-sachsen.de?bcc=' + ${emails}"><span class="glyphicon glyphicon-envelope"></span> E-Mail</a>
             </div>
         </div>
     </header>
