--- a/src/main/resources/templates/eventDetails.html
+++ b/src/main/resources/templates/eventDetails.html
@@ -590,6 +590,15 @@
                </p>
             </div>
 
+            <div class="alert alert-danger alert-dismissible" role="alert" th:if="${bookedOut}">
+               <button type="button" class="close" data-dismiss="alert" aria-label="Schließen">
+                  <span aria-hidden="true">&times;</span>
+               </button>
+               <p>
+                  Die Veranstaltung ist bereits ausgebucht
+               </p>
+            </div>
+
         </section>
 
         <!-- event overview -->
@@ -672,7 +681,7 @@
                         <h2 class="panel-title">Teilnehmer <span class="glyphicon glyphicon-question-sign" data-toggle="tooltip" data-placement="right" data-title="Für Details auf die entsprechende Zeile klicken"></span></h2>
                         <div class="input-group panel-menu-container">
                             <div class="btn-group">
-                                <button type="button" class="btn btn-default" data-toggle="modal" data-target="#add-participant-modal"><span class="glyphicon glyphicon-plus"></span> Hinzufügen</button>
+                                <button type="button" class="btn btn-default" data-toggle="modal" data-target="#add-participant-modal" th:disabled="${event.bookedOut}"><span class="glyphicon glyphicon-plus"></span> Hinzufügen</button>
                                 <div class="btn-group">
                                     <a href="mailto:" class="btn btn-default" th:href="'mailto:event@naju-sachsen.de?bcc=' + ${participantEmails}">
                                         <span class="glyphicon glyphicon-envelope"></span> E-Mail
