Preparing for implementation of the local group management
In this case this means enabling the menu item for the chapter-view

--- a/src/main/resources/templates/eventDetails.html
+++ b/src/main/resources/templates/eventDetails.html
@@ -50,8 +50,8 @@
                 <li class="active" role="presentation">
                     <a href="events.html" th:href="@{/events}"><span class="glyphicon glyphicon-tent nav-icon" aria-hidden="true"></span> Veranstaltungen <span class="sr-only">(akutell)</span></a>
                 </li>
-                <li class="disabled" role="presentation">
-                    <a href="#" th:href="@{/localGroups}"><span class="glyphicon glyphicon-map-marker nav-icon" aria-hidden="true"></span> Ortsgruppen</a>
+                <li role="presentation">
+                    <a href="localGroups.html" th:href="@{/localGroups}"><span class="glyphicon glyphicon-map-marker nav-icon" aria-hidden="true"></span> Ortsgruppen</a>
                 </li>
                 <li role="presentation">
                     <a href="newsletters.html" th:href="@{/newsletters}"><span class="glyphicon glyphicon-envelope nav-icon" aria-hidden="true"></span> Newsletter</a>
