Fixing nav menu URLs
The links to the event overview as well as the local group overview were
missing the correct th:href attributes.
Resolves #8

--- a/src/main/resources/templates/newsletterDetails.html
+++ b/src/main/resources/templates/newsletterDetails.html
@@ -36,10 +36,10 @@
                   <a href="persons.html" th:href="@{/persons}"><span class="glyphicon glyphicon-user nav-icon" aria-hidden="true"></span> Personen</a>
                </li>
                <li role="presentation">
-                  <a href="events.html"><span class="glyphicon glyphicon-tent nav-icon" aria-hidden="true"></span> Veranstaltungen</a>
+                  <a href="events.html" th:href="@{/events}"><span class="glyphicon glyphicon-tent nav-icon" aria-hidden="true"></span> Veranstaltungen</a>
                </li>
                <li role="presentation">
-                  <a href="localGroups.html"><span class="glyphicon glyphicon-map-marker nav-icon" aria-hidden="true"></span> Ortsgruppen</a>
+                  <a href="localGroups.html" th:href="@{/localGroups}"><span class="glyphicon glyphicon-map-marker nav-icon" aria-hidden="true"></span> Ortsgruppen</a>
                </li>
                <li role="presentation" class="active">
                   <a href="localGroups.html" th:href="@{/newsletters}"><span class="glyphicon glyphicon-envelope nav-icon" aria-hidden="true"></span> Newsletter <span class="sr-only">(akutell)</span></a>
